# sphinx-bioschemas

./: README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: pages.yml  pypi.yml  tests.yml
docs/: bioschemas.json  bioschemas.yaml  conf.py  index.rst  markdown.md
sphinx-bioschemas/: __init__.py
src/sphinx_bioschemas/: __init__.py
