[project]
name = "sphinx-bioschemas"
version = "0.1.0"
description = "A Sphinx extension that inserts a Bioschemas profiles or any kind schema.org structured metadata."
readme = "README.rst"
license = "MIT"
authors = [{ name = "Toni Hermoso Pulido", email = 'toni.hermoso@crg.eu' }]
requires-python = ">=3.10"
dependencies = [
    "docutils>=0.16",
    "pyyaml",
    "sphinx>=4.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -v"

[project.urls]
Homepage = "https://github.com/biocorecrg/sphinx-bioschemas"
Issues = "https://github.com/biocorecrg/sphinx-bioschemas/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = [
    "pytest"
]


[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "sphinx_bioschemas.__version__" }

[tool.setuptools.packages.find]
where = [
  ".",
] # list of folders that contain the packages (["."] by default)
include = [
  "sphinx_bioschemas*",
] # package names should match these glob patterns (["*"] by default)
namespaces = true # allow scanning PEP 420 namespaces (true by default)

